# shell

./: .gitignore  CONTRIBUTING.md  README.md  install.py  install.sh  install_config.json  install_config.yaml  install_operations.json  messages.py  pyproject.toml
config/htop/: htoprc
config/iterm2/: AppSupport
config/vifm/: vifminfo  vifminfo.json  vifmrc
data/dotfiles/: .bashrc  .ctags  .gitconfig
data/oh-my-bash/custom/: xexports.sh
data/oh-my-bash/custom/aliases/: custom.aliases.sh
dotfiles/: .bash_profile  .fzf.bash  .gitconfig  .vimrc
dotfiles/config/git/: config  ignore
dotfiles/config/vifm/: vifmrc
dotfiles/config/vim/: vimrc
dotfiles/dotfiles/: .bashrc  .gitconfig  .vimrc
dotfiles/oh-my-bash/custom/: install_completion.sh  setup-ssh-agent.sh  source.sh  system.sh  xexports.sh
dotfiles/oh-my-bash/custom/aliases/: custom.aliases.sh
installers/: __init__.py  base.py  binary.py  messages.py  script.py  source.py  symlinker.py  tools.py
installers/custom/: git_identity.py  github.py
keychron/: K8-Pro-ANSI-White-v1.0.json
oh-my-bash/: bashrc
oh-my-bash/custom/: exports.sh  system.sh  xexports.sh
oh-my-bash/custom/aliases/: custom.aliases.sh
oh-my-bash/custom/plugins/: ssh_no_pass.sh
oh-my-bash/custom/plugins/mountit/: mountit.plugin.sh
oh-my-bash/custom/plugins/passwordless-ssh/: passwordless-ssh.plugin.sh
oh.my.bash/: .bashrc
oh.my.bash/custom/aliases/: custom.aliases.sh
tests/: test_base.py  test_github.py
vim/: .vimrc  vimrc
vim-pluggins/ultisnips/: all.snippets  markdown.snippets  python.snippets
(+6 files in other folders)
