[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core"]

[tool.poetry]
authors = ["G. Arampatzis <georgios.arampatzis@uoc.gr>"]
description = "Advanced Dotfiles Installation Script"
name = "shell"
packages = [
  {include = "installers"}
]
readme = "README.md"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.2.0"
pretty-errors = "^1.2.25"
